logs/bioutil.log
Listing '.'...
Listing './bin'...
Compiling './bin/vcf_filter.py'...
Compiling './bin/vcf_sample_filter.py'...
***   File "./bin/vcf_sample_filter.py", line 37
    print "Samples:"
                   ^
SyntaxError: Missing parentheses in call to 'print'

Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/BioUtil'...
Listing './lib/python3.5/site-packages/BioUtil-0.2.0.egg-info'...
Listing './lib/python3.5/site-packages/Cython'...
Listing './lib/python3.5/site-packages/Cython/Build'...
Listing './lib/python3.5/site-packages/Cython/Build/Tests'...
Listing './lib/python3.5/site-packages/Cython/Compiler'...
Listing './lib/python3.5/site-packages/Cython/Compiler/Tests'...
Listing './lib/python3.5/site-packages/Cython/Debugger'...
Listing './lib/python3.5/site-packages/Cython/Debugger/Tests'...
Listing './lib/python3.5/site-packages/Cython/Distutils'...
Listing './lib/python3.5/site-packages/Cython/Includes'...
Listing './lib/python3.5/site-packages/Cython/Includes/Deprecated'...
Listing './lib/python3.5/site-packages/Cython/Includes/cpython'...
Listing './lib/python3.5/site-packages/Cython/Includes/libc'...
Listing './lib/python3.5/site-packages/Cython/Includes/libcpp'...
Listing './lib/python3.5/site-packages/Cython/Includes/numpy'...
Listing './lib/python3.5/site-packages/Cython/Includes/posix'...
Listing './lib/python3.5/site-packages/Cython/Plex'...
Listing './lib/python3.5/site-packages/Cython/Runtime'...
Listing './lib/python3.5/site-packages/Cython/Tempita'...
Listing './lib/python3.5/site-packages/Cython/Tests'...
Listing './lib/python3.5/site-packages/Cython/Utility'...
Listing './lib/python3.5/site-packages/Cython-0.27.3.dist-info'...
Listing './lib/python3.5/site-packages/PyVCF-0.6.8.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/pyfaidx'...
Listing './lib/python3.5/site-packages/pyfaidx-0.5.1.egg-info'...
Listing './lib/python3.5/site-packages/pysam'...
Listing './lib/python3.5/site-packages/pysam/include'...
Listing './lib/python3.5/site-packages/pysam/include/bcftools'...
Listing './lib/python3.5/site-packages/pysam/include/htslib'...
Listing './lib/python3.5/site-packages/pysam/include/htslib/htslib'...
Listing './lib/python3.5/site-packages/pysam/include/samtools'...
Listing './lib/python3.5/site-packages/pysam/include/samtools/win32'...
Listing './lib/python3.5/site-packages/pysam-0.13.dist-info'...
Listing './lib/python3.5/site-packages/pyximport'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/six-1.11.0.dist-info'...
Listing './lib/python3.5/site-packages/vcf'...
Listing './lib/python3.5/site-packages/vcf/test'...
Listing './share'...
Listing './share/python-wheels'...
